libexec_SCRIPTS=check_nwc_health
GL_MODULES=\
  ../GLPlugin/lib/Monitoring/GLPlugin/Commandline/Extraopts.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/Commandline/Getopt.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/Commandline.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/Item.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/TableItem.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/MIB2MIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SNMPFRAMEWORKMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ADSLLINEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ADONISDNSMIBMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/AIRESPACESWITCHINGMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/AIRESPACEWIRELESSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ALARMMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ALCATELIND1BASEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ARISTABGP4V2MIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ARISTAENTITYSENSORMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ARISTAIFMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ARUBATCMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ARUBAWIREDCHASSISMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ARUBAWIREDFANTRAYMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ARUBAWIREDFANMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ARUBAWIREDPOWERSUPPLYMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ARUBAWIREDVSFMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ARUBAWIREDTEMPSENSORMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ASYNCOSMAILMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ATTACKMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/BAMSNMPMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/BCNDHCPV4MIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/BCNDNSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/BCNSYSTEMMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/BGP4MIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/BIANCABRICKMIBRESMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/BLUECOATAVMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/BLUECOATSGPROXYMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/BRIDGEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CHECKPOINTMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOBGP4MIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOCCMMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOCONFIGMANMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOEIGRPMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOENHANCEDMEMPOOLMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOENTITYALARMMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOENTITYFRUCONTROLMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOENTITYSENSORMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOENVMONMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOERRDISABLEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOETHERNETFABRICEXTENDERMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOFEATURECONTROLMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOFIREWALLMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOHSRPMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOIETFNATMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOIPSECFLOWMONITORMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOL2L3INTERFACECONFIGMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOLICENSEMGMTMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOLWAPPAPMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOLWAPPCDPMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOLWAPPHAMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOMEMORYPOOLMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOPORTCHANNELMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOPORTSECURITYMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOPROCESSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOREMOTEACCESSMONITORMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCORTTMONMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCORTTMONTCMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOSBHWENVIROMENTMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOSBRNDMNGMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOSBSYSMNGMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOSBTUNINGMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOSDWANOPERSYSTEMMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOSDWANAPPROUTEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOSMARTLICMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOSTACKMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOSTACKWISEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOSYSTEMEXTMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CISCOVTPMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/CLAVISTERMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/DCBGPMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/DEVICEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/DISKMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ELTEXMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ENTITYMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ENTITYSENSORMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ENTITYSTATEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ETHERLIKEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/F5BIGIPAPMMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/F5BIGIPGLOBALMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/F5BIGIPLOCALMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/F5BIGIPSYSTEMMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/FCEOSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/FCMGMTMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/FIBRECHANNELFEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/FORTINETCOREMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/FORTINETFORTIGATEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/FOUNDRYSNAGENTMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/FOUNDRYSNSWL4SWITCHGROUPMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/GENUAMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/HH3CENTITYEXTMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/HUAWEIBGPVPNMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/HUAWEIENTITYEXTENTMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/HUAWEIL2MAMMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/HUAWEIL2VLANMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/HUAWEIWLANAPMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/HUAWEIWLANAPRADIOMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/HUAWEIWLANCONFIGURATIONMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/HUAWEIWLANSTATIONMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/HOSTRESOURCESMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/HPICFCHASSIS.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/IANAIFTYPEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/IANARTPROTOMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/IEEE8023LAGMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/IFMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/INETADDRESSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/IPFORWARDMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/IPMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/JUNIPERALARMMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/JUNIPERMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/JUNIPERIVEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/JUNIPERRPSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/JUNIPERSRX5000SPUMONITORINGMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/JUNOSBGP4V2MIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LARAMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LCOSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LMSENSORSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/LOADBALSYSTEMMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/MINIIFMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/NETGEARMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/NETSCREENCHASSISMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/NETSCREENNSRPMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/NETSCREENPRODUCTSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/NETSCREENRESOURCEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/NETSWITCHMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/OLDCISCOCPUMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/OLDCISCOINTERFACESMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/OLDNETSWITCHMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/OLDSTATISTICSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ONEACCESSSYSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/OPENBSDCARPMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/OPENBSDMEMMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/OPENBSDPFMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/OPENBSDSENSORSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/ORGMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/OSPFMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/OSPFV3MIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/PANCOMMONMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/PANPRODUCTSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/PHIONMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/PROXYMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/PULSESECUREPSGMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/QBRIDGEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/RAPIDCITYMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/RESOURCEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/RMONMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/S5CHASSISMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SENSORMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SNMPV2TCV1MIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/STATISTICSMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/STEELHEADMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/STEELHEADEXMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/STORAGEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SWMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SYNOPTICSROOTMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/SYSTEMRESOURCESMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/UCDDISKIOMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/UCDSNMPMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/USAGEMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/VIPTELAHARDWARE.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/VIPTELAOPERSYSTEM.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/VIPTELASECURITY.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/VORMETRICMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/VRRPMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/WLSXSYSTEMEXTMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/MibsAndOids/WLSXWLANMIB.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/CSF.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/Item.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/SNMP/TableItem.pm \
  ../GLPlugin/lib/Monitoring/GLPlugin/UPNP.pm
EXTRA_MODULES=\
  CheckNwcHealth/UPNP/AVM/FritzBox7390/Components/InterfaceSubsystem.pm \
  CheckNwcHealth/UPNP/AVM/FritzBox7390/Components/SmartHomeSubsystem.pm \
  CheckNwcHealth/UPNP/AVM/FritzBox7390.pm \
  CheckNwcHealth/UPNP/AVM.pm \
  CheckNwcHealth/UPNP.pm \
  CheckNwcHealth/Server/LinuxLocal.pm \
  CheckNwcHealth/Server/WindowsLocal.pm \
  CheckNwcHealth/Server/SolarisLocal.pm \
  CheckNwcHealth/Server/Linux.pm \
  CheckNwcHealth/Server/Linux/Component/CpuSubsystem.pm \
  CheckNwcHealth/Server/Linux/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Server/Linux/Component/MemSubsystem.pm \
  CheckNwcHealth/Bintec/Bibo/Components/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Bintec/Bibo/Components/MemSubsystem.pm \
  CheckNwcHealth/Bintec/Bibo/Components/CpuSubsystem.pm \
  CheckNwcHealth/Bintec/Bibo.pm \
  CheckNwcHealth/Bintec.pm \
  CheckNwcHealth/Bluecat/AddressManager/Component/MgmtSubsystem.pm \
  CheckNwcHealth/Bluecat/AddressManager/Component/MemSubsystem.pm \
  CheckNwcHealth/Bluecat/AddressManager/Component/HaSubsystem.pm \
  CheckNwcHealth/Bluecat/AddressManager.pm \
  CheckNwcHealth/Bluecat/DnsDhcpServer/Component/HaSubsystem.pm \
  CheckNwcHealth/Bluecat/DnsDhcpServer/Component/ProcessSubsystem.pm \
  CheckNwcHealth/Bluecat/DnsDhcpServer.pm \
  CheckNwcHealth/Bluecat.pm \
  CheckNwcHealth/Cisco/CISCOLICENSEMGMTMIB/Component/KeySubsystem.pm \
  CheckNwcHealth/Cisco/CISCOSMARTLICMIB/Component/KeySubsystem.pm \
  CheckNwcHealth/Cisco/CISCOBGP4MIB/Components/PeerSubsystem.pm \
  CheckNwcHealth/Cisco/CISCOEIGRPMIB/Components/PeerSubsystem.pm \
  CheckNwcHealth/Cisco/CISCOPORTSECURITYMIB/Component/InterfaceSubsystem.pm \
  CheckNwcHealth/Cisco/OLDCISCOINTERFACESMIB/Component/InterfaceSubsystem.pm \
  CheckNwcHealth/Cisco/CISCOIPSECFLOWMONITOR/Component/VpnSubsystem.pm \
  CheckNwcHealth/Cisco/CISCOENHANCEDMEMPOOLMIB/Component/MemSubsystem.pm \
  CheckNwcHealth/Cisco/CISCOPROCESSMIB/Component/MemSubsystem.pm \
  CheckNwcHealth/Cisco/CISCOMEMORYPOOLMIB/Component/MemSubsystem.pm \
  CheckNwcHealth/Cisco/CISCOENTITYFRUCONTROLMIB/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Cisco/CISCOENTITYFRUCONTROLMIB/Component/FanSubsystem.pm \
  CheckNwcHealth/Cisco/CISCOENTITYFRUCONTROLMIB/Component/ModuleSubsystem.pm \
  CheckNwcHealth/Cisco/CISCOENTITYFRUCONTROLMIB/Component/PowersupplySubsystem.pm \
  CheckNwcHealth/Cisco/CISCOENTITYSENSORMIB/Component/SensorSubsystem.pm \
  CheckNwcHealth/Cisco/CISCOENTITYALARMMIB/Component/AlarmSubsystem.pm \
  CheckNwcHealth/Cisco/CISCOENVMONMIB/Component/TemperatureSubsystem.pm \
  CheckNwcHealth/Cisco/CISCOENVMONMIB/Component/PowersupplySubsystem.pm \
  CheckNwcHealth/Cisco/CISCOENVMONMIB/Component/VoltageSubsystem.pm \
  CheckNwcHealth/Cisco/CISCOENVMONMIB/Component/FanSubsystem.pm \
  CheckNwcHealth/Cisco/CISCOREMOTEACCESSMONITORMIB/Component/VpnSubsystem.pm \
  CheckNwcHealth/Cisco/CISCORTTMONMIB/Component/RttSubsystem.pm \
  CheckNwcHealth/Cisco/CISCOSDWANMIB/Component/SdwanSubsystem.pm \
  CheckNwcHealth/Cisco/CISCOSTACKMIB/Component/StackSubsystem.pm \
  CheckNwcHealth/Cisco/CISCOSTACKWISEMIB/Component/StackSubsystem.pm \
  CheckNwcHealth/Cisco/CISCOERRDISABLEMIB/Component/InterfaceSubsystem.pm \
  CheckNwcHealth/Cisco/ASA.pm \
  CheckNwcHealth/Cisco/IOS/Component/HaSubsystem.pm \
  CheckNwcHealth/Cisco/IOS/Component/ConfigSubsystem.pm \
  CheckNwcHealth/Cisco/IOS/Component/CpuSubsystem.pm \
  CheckNwcHealth/Cisco/IOS/Component/MemSubsystem.pm \
  CheckNwcHealth/Cisco/IOS/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Cisco/IOS/Component/ConnectionSubsystem.pm \
  CheckNwcHealth/Cisco/IOS/Component/NatSubsystem.pm \
  CheckNwcHealth/Cisco/IOS/Component/BgpSubsystem.pm \
  CheckNwcHealth/Cisco/IOS.pm \
  CheckNwcHealth/Cisco/NXOS/Component/CpuSubsystem.pm \
  CheckNwcHealth/Cisco/NXOS/Component/MemSubsystem.pm \
  CheckNwcHealth/Cisco/NXOS/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Cisco/NXOS/Component/FexSubsystem.pm \
  CheckNwcHealth/Cisco/NXOS.pm \
  CheckNwcHealth/Cisco/WLC/Component/HaSubsystem.pm \
  CheckNwcHealth/Cisco/WLC/Component/MemSubsystem.pm \
  CheckNwcHealth/Cisco/WLC/Component/CpuSubsystem.pm \
  CheckNwcHealth/Cisco/WLC/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Cisco/WLC/Component/WlanSubsystem.pm \
  CheckNwcHealth/Cisco/WLC.pm \
  CheckNwcHealth/Cisco/PrimeNCS.pm \
  CheckNwcHealth/Cisco/UCOS.pm \
  CheckNwcHealth/Cisco/CCM/Component/PhoneSubsystem.pm \
  CheckNwcHealth/Cisco/CCM/Component/CmSubsystem.pm \
  CheckNwcHealth/Cisco/CCM.pm \
  CheckNwcHealth/Cisco/AsyncOS/Component/KeySubsystem.pm \
  CheckNwcHealth/Cisco/AsyncOS/Component/MemSubsystem.pm \
  CheckNwcHealth/Cisco/AsyncOS/Component/CpuSubsystem.pm \
  CheckNwcHealth/Cisco/AsyncOS/Component/TemperatureSubsystem.pm \
  CheckNwcHealth/Cisco/AsyncOS/Component/PowersupplySubsystem.pm \
  CheckNwcHealth/Cisco/AsyncOS/Component/FanSubsystem.pm \
  CheckNwcHealth/Cisco/AsyncOS/Component/RaidSubsystem.pm \
  CheckNwcHealth/Cisco/AsyncOS/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Cisco/AsyncOS.pm \
  CheckNwcHealth/Cisco/SB/Component/MemSubsystem.pm \
  CheckNwcHealth/Cisco/SB/Component/CpuSubsystem.pm \
  CheckNwcHealth/Cisco/SB/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Cisco/SB.pm \
  CheckNwcHealth/Cisco/Viptela/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Cisco/Viptela/Component/DiskSubsystem.pm \
  CheckNwcHealth/Cisco/Viptela/Component/MemSubsystem.pm \
  CheckNwcHealth/Cisco/Viptela/Component/CpuSubsystem.pm \
  CheckNwcHealth/Cisco/Viptela/Component/SdwanSubsystem.pm \
  CheckNwcHealth/Cisco/Viptela.pm \
  CheckNwcHealth/Cisco.pm \
  CheckNwcHealth/OneOS/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/OneOS/Component/CpuSubsystem.pm \
  CheckNwcHealth/OneOS/Component/MemSubsystem.pm \
  CheckNwcHealth/OneOS.pm \
  CheckNwcHealth/Nortel/S5/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Nortel/S5/Component/CpuSubsystem.pm \
  CheckNwcHealth/Nortel/S5/Component/MemSubsystem.pm \
  CheckNwcHealth/Nortel/S5.pm \
  CheckNwcHealth/Nortel.pm \
  CheckNwcHealth/Juniper/JunOS/Component/BgpSubsystem.pm \
  CheckNwcHealth/Juniper/JunOS.pm \
  CheckNwcHealth/Juniper/NetScreen/Component/CpuSubsystem.pm \
  CheckNwcHealth/Juniper/NetScreen/Component/MemSubsystem.pm \
  CheckNwcHealth/Juniper/NetScreen/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Juniper/NetScreen/Component/VsdSubsystem.pm \
  CheckNwcHealth/Juniper/NetScreen.pm \
  CheckNwcHealth/Juniper/IVE/Component/MemSubsystem.pm \
  CheckNwcHealth/Juniper/IVE/Component/CpuSubsystem.pm \
  CheckNwcHealth/Juniper/IVE/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Juniper/IVE/Component/DiskSubsystem.pm \
  CheckNwcHealth/Juniper/IVE/Component/UserSubsystem.pm \
  CheckNwcHealth/Juniper/IVE.pm \
  CheckNwcHealth/Juniper/SRX/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Juniper/SRX/Component/CpuSubsystem.pm \
  CheckNwcHealth/Juniper/SRX/Component/MemSubsystem.pm \
  CheckNwcHealth/Juniper/SRX.pm \
  CheckNwcHealth/Juniper.pm \
  CheckNwcHealth/AlliedTelesyn.pm \
  CheckNwcHealth/Fortigate/Component/HaSubsystem.pm \
  CheckNwcHealth/Fortigate/Component/DiskSubsystem.pm \
  CheckNwcHealth/Fortigate/Component/MemSubsystem.pm \
  CheckNwcHealth/Fortigate/Component/CpuSubsystem.pm \
  CheckNwcHealth/Fortigate/Component/VpnSubsystem.pm \
  CheckNwcHealth/Fortigate/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Fortigate/Component/SensorSubsystem.pm \
  CheckNwcHealth/Fortigate.pm \
  CheckNwcHealth/FabOS/Component/MemSubsystem.pm \
  CheckNwcHealth/FabOS/Component/CpuSubsystem.pm \
  CheckNwcHealth/FabOS/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/FabOS/Component/SensorSubsystem.pm \
  CheckNwcHealth/FabOS/Component/InterfaceSubsystem.pm \
  CheckNwcHealth/FabOS.pm \
  CheckNwcHealth/HH3C/Component/EntitySubsystem.pm \
  CheckNwcHealth/HH3C/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/HH3C/Component/MemSubsystem.pm \
  CheckNwcHealth/HH3C/Component/CpuSubsystem.pm \
  CheckNwcHealth/HH3C.pm \
  CheckNwcHealth/Huawei/Component/WlanSubsystem.pm \
  CheckNwcHealth/Huawei/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Huawei/Component/CpuSubsystem.pm \
  CheckNwcHealth/Huawei/Component/MemSubsystem.pm \
  CheckNwcHealth/Huawei/Component/PeerSubsystem.pm \
  CheckNwcHealth/Huawei/HUAWEIL2VLANMIB/Component/VlanSubsystem.pm \
  CheckNwcHealth/Huawei/HUAWEIL2MAMMIB/Component/VlanSubsystem.pm \
  CheckNwcHealth/Huawei/CloudEngine.pm \
  CheckNwcHealth/Huawei.pm \
  CheckNwcHealth/HP/Procurve/Component/MemSubsystem.pm \
  CheckNwcHealth/HP/Procurve/Component/CpuSubsystem.pm \
  CheckNwcHealth/HP/Procurve/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/HP/Procurve/Component/SensorSubsystem.pm \
  CheckNwcHealth/HP/Procurve.pm \
  CheckNwcHealth/HP/Aruba/Component/MemSubsystem.pm \
  CheckNwcHealth/HP/Aruba/Component/CpuSubsystem.pm \
  CheckNwcHealth/HP/Aruba/Component/TemperatureSubsystem.pm \
  CheckNwcHealth/HP/Aruba/Component/FanSubsystem.pm \
  CheckNwcHealth/HP/Aruba/Component/PowersupplySubsystem.pm \
  CheckNwcHealth/HP/Aruba/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/HP/Aruba.pm \
  CheckNwcHealth/HP.pm \
  CheckNwcHealth/MEOS.pm \
  CheckNwcHealth/Brocade.pm \
  CheckNwcHealth/SecureOS.pm \
  CheckNwcHealth/HSRP/Component/HSRPSubsystem.pm \
  CheckNwcHealth/HSRP.pm \
  CheckNwcHealth/IFMIB/Component/LinkAggregation.pm \
  CheckNwcHealth/IFMIB/Component/InterfaceSubsystem.pm \
  CheckNwcHealth/IFMIB/Component/StackSubsystem.pm \
  CheckNwcHealth/IFMIB.pm \
  CheckNwcHealth/IPFORWARDMIB/Component/RoutingSubsystem.pm \
  CheckNwcHealth/IPFORWARDMIB.pm \
  CheckNwcHealth/IPMIB/Component/RoutingSubsystem.pm \
  CheckNwcHealth/IPMIB/Component/ArpSubsystem.pm \
  CheckNwcHealth/IPMIB.pm \
  CheckNwcHealth/VRRPMIB/Component/VRRPSubsystem.pm \
  CheckNwcHealth/VRRPMIB.pm \
  CheckNwcHealth/HOSTRESOURCESMIB/Component/ClockSubsystem.pm \
  CheckNwcHealth/HOSTRESOURCESMIB/Component/DeviceSubsystem.pm \
  CheckNwcHealth/HOSTRESOURCESMIB/Component/DiskSubsystem.pm \
  CheckNwcHealth/HOSTRESOURCESMIB/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/HOSTRESOURCESMIB/Component/CpuSubsystem.pm \
  CheckNwcHealth/HOSTRESOURCESMIB/Component/MemSubsystem.pm \
  CheckNwcHealth/HOSTRESOURCESMIB/Component/UptimeSubsystem.pm \
  CheckNwcHealth/HOSTRESOURCESMIB.pm \
  CheckNwcHealth/LMSENSORSMIB/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/LMSENSORSMIB/Component/FanSubsystem.pm \
  CheckNwcHealth/LMSENSORSMIB/Component/TemperatureSubsystem.pm \
  CheckNwcHealth/LMSENSORSMIB.pm \
  CheckNwcHealth/ENTITYSENSORMIB.pm \
  CheckNwcHealth/ENTITYSENSORMIB/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/OSPF/Component/NeighborSubsystem.pm \
  CheckNwcHealth/OSPF.pm \
  CheckNwcHealth/BGP/Component/PeerSubsystem.pm \
  CheckNwcHealth/BGP.pm \
  CheckNwcHealth/FCMGMT/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/FCMGMT/Component/SensorSubsystem.pm \
  CheckNwcHealth/FCMGMT.pm \
  CheckNwcHealth/FCEOS/Components/EnvironmentalSubsystem.pm \
  CheckNwcHealth/FCEOS/Components/FruSubsystem.pm \
  CheckNwcHealth/FCEOS.pm \
  CheckNwcHealth/UCDMIB/Components/MemSubsystem.pm \
  CheckNwcHealth/UCDMIB/Components/SwapSubsystem.pm \
  CheckNwcHealth/UCDMIB/Components/CpuSubsystem.pm \
  CheckNwcHealth/UCDMIB/Components/LoadSubsystem.pm \
  CheckNwcHealth/UCDMIB/Components/DiskSubsystem.pm \
  CheckNwcHealth/UCDMIB/Components/ProcessSubsystem.pm \
  CheckNwcHealth/UCDMIB.pm \
  CheckNwcHealth/F5/F5BIGIP/Component/ConfigSubsystem.pm \
  CheckNwcHealth/F5/F5BIGIP/Component/ConnectionSubsystem.pm \
  CheckNwcHealth/F5/F5BIGIP/Component/CpuSubsystem.pm \
  CheckNwcHealth/F5/F5BIGIP/Component/DiskSubsystem.pm \
  CheckNwcHealth/F5/F5BIGIP/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/F5/F5BIGIP/Component/FanSubsystem.pm \
  CheckNwcHealth/F5/F5BIGIP/Component/GTM.pm \
  CheckNwcHealth/F5/F5BIGIP/Component/HaSubsystem.pm \
  CheckNwcHealth/F5/F5BIGIP/Component/VipSubsystem.pm \
  CheckNwcHealth/F5/F5BIGIP/Component/LTM.pm \
  CheckNwcHealth/F5/F5BIGIP/Component/MemSubsystem.pm \
  CheckNwcHealth/F5/F5BIGIP/Component/PowersupplySubsystem.pm \
  CheckNwcHealth/F5/F5BIGIP/Component/TemperatureSubsystem.pm \
  CheckNwcHealth/F5/F5BIGIP.pm \
  CheckNwcHealth/F5.pm \
  CheckNwcHealth/CheckPoint/Firewall1/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/CheckPoint/Firewall1/Component/TemperatureSubsystem.pm \
  CheckNwcHealth/CheckPoint/Firewall1/Component/FanSubsystem.pm \
  CheckNwcHealth/CheckPoint/Firewall1/Component/VoltageSubsystem.pm \
  CheckNwcHealth/CheckPoint/Firewall1/Component/PowersupplySubsystem.pm \
  CheckNwcHealth/CheckPoint/Firewall1/Component/DiskSubsystem.pm \
  CheckNwcHealth/CheckPoint/Firewall1/Component/MngmtSubsystem.pm \
  CheckNwcHealth/CheckPoint/Firewall1/Component/SvnSubsystem.pm \
  CheckNwcHealth/CheckPoint/Firewall1/Component/FwSubsystem.pm \
  CheckNwcHealth/CheckPoint/Firewall1/Component/HaSubsystem.pm \
  CheckNwcHealth/CheckPoint/Firewall1/Component/CpuSubsystem.pm \
  CheckNwcHealth/CheckPoint/Firewall1/Component/MemSubsystem.pm \
  CheckNwcHealth/CheckPoint/Firewall1/Component/VpnSubsystem.pm \
  CheckNwcHealth/CheckPoint/Firewall1.pm \
  CheckNwcHealth/CheckPoint/VSX/Component/FwSubsystem.pm \
  CheckNwcHealth/CheckPoint/VSX.pm \
  CheckNwcHealth/CheckPoint/Gaia.pm \
  CheckNwcHealth/CheckPoint.pm \
  CheckNwcHealth/Clavister/Firewall1/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Clavister/Firewall1/Component/CpuSubsystem.pm \
  CheckNwcHealth/Clavister/Firewall1/Component/MemSubsystem.pm \
  CheckNwcHealth/Clavister/Firewall1.pm \
  CheckNwcHealth/Clavister.pm \
  CheckNwcHealth/SGOS/Component/MemSubsystem.pm \
  CheckNwcHealth/SGOS/Component/CpuSubsystem.pm \
  CheckNwcHealth/SGOS/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/SGOS/Component/SensorSubsystem.pm \
  CheckNwcHealth/SGOS/Component/DiskSubsystem.pm \
  CheckNwcHealth/SGOS/Component/SecuritySubsystem.pm \
  CheckNwcHealth/SGOS/Component/ConnectionSubsystem.pm \
  CheckNwcHealth/SGOS.pm \
  CheckNwcHealth/AVOS/Component/KeySubsystem.pm \
  CheckNwcHealth/AVOS/Component/SecuritySubsystem.pm \
  CheckNwcHealth/AVOS/Component/ConnectionSubsystem.pm \
  CheckNwcHealth/AVOS/Component/MemSubsystem.pm \
  CheckNwcHealth/AVOS/Component/CpuSubsystem.pm \
  CheckNwcHealth/AVOS.pm \
  CheckNwcHealth/Alcatel/OmniAccess/Component/HaSubsystem.pm \
  CheckNwcHealth/Alcatel/OmniAccess/Component/MemSubsystem.pm \
  CheckNwcHealth/Alcatel/OmniAccess/Component/CpuSubsystem.pm \
  CheckNwcHealth/Alcatel/OmniAccess/Component/PowersupplySubsystem.pm \
  CheckNwcHealth/Alcatel/OmniAccess/Component/FanSubsystem.pm \
  CheckNwcHealth/Alcatel/OmniAccess/Component/StorageSubsystem.pm \
  CheckNwcHealth/Alcatel/OmniAccess/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Alcatel/OmniAccess/Component/WlanSubsystem.pm \
  CheckNwcHealth/Alcatel/OmniAccess.pm \
  CheckNwcHealth/Alcatel.pm \
  CheckNwcHealth/ALARMMIB/Component/AlarmSubsystem.pm \
  CheckNwcHealth/Foundry/Component/SLBSubsystem.pm \
  CheckNwcHealth/Foundry/Component/MemSubsystem.pm \
  CheckNwcHealth/Foundry/Component/CpuSubsystem.pm \
  CheckNwcHealth/Foundry/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Foundry/Component/PowersupplySubsystem.pm \
  CheckNwcHealth/Foundry/Component/FanSubsystem.pm \
  CheckNwcHealth/Foundry/Component/TemperatureSubsystem.pm \
  CheckNwcHealth/Foundry/Component/ModuleSubsystem.pm \
  CheckNwcHealth/Foundry.pm \
  CheckNwcHealth/RAPIDCITYMIB/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/RAPIDCITYMIB/Component/PowersupplySubsystem.pm \
  CheckNwcHealth/RAPIDCITYMIB/Component/FanSubsystem.pm \
  CheckNwcHealth/RAPIDCITYMIB/Component/TemperatureSubsystem.pm \
  CheckNwcHealth/RAPIDCITYMIB.pm \
  CheckNwcHealth/PaloAlto/Component/SessionSubsystem.pm \
  CheckNwcHealth/PaloAlto/Component/MemSubsystem.pm \
  CheckNwcHealth/PaloAlto/Component/CpuSubsystem.pm \
  CheckNwcHealth/PaloAlto/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/PaloAlto/Component/HaSubsystem.pm \
  CheckNwcHealth/PaloAlto.pm \
  CheckNwcHealth/Bluecoat.pm \
  CheckNwcHealth/Cumulus.pm \
  CheckNwcHealth/Eltex/Access/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Eltex/Access.pm \
  CheckNwcHealth/Eltex/Aggregation/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Eltex/Aggregation.pm \
  CheckNwcHealth/Eltex/MES/Component/CpuSubsystem.pm \
  CheckNwcHealth/Eltex/MES/Component/HaSubsystem.pm \
  CheckNwcHealth/Eltex.pm \
  CheckNwcHealth/Netgear.pm \
  CheckNwcHealth/Lantronix.pm \
  CheckNwcHealth/Lantronix/SLS.pm \
  CheckNwcHealth/Arista/ARISTABGP4V2MIB/Components/PeerSubsystem.pm \
  CheckNwcHealth/Arista/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Arista/Component/DiskSubsystem.pm \
  CheckNwcHealth/Arista/ARISTAIFMIB/Component/InterfaceSubsystem.pm \
  CheckNwcHealth/Arista.pm \
  CheckNwcHealth/Riverbed/SteelheadEX/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Riverbed/Steelhead/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Riverbed/Steelhead.pm \
  CheckNwcHealth/Riverbed.pm \
  CheckNwcHealth/Vormetric/Component/CpuSubsystem.pm \
  CheckNwcHealth/Vormetric/Component/DiskSubsystem.pm \
  CheckNwcHealth/Vormetric/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Vormetric/Component/MemSubsystem.pm \
  CheckNwcHealth/Vormetric.pm \
  CheckNwcHealth/Lancom/Component/CpuSubsystem.pm \
  CheckNwcHealth/Lancom/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Lancom/Component/MemSubsystem.pm \
  CheckNwcHealth/Lancom.pm \
  CheckNwcHealth/DrayTek/Vigor/Component/CpuSubsystem.pm \
  CheckNwcHealth/DrayTek/Vigor/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/DrayTek/Vigor/Component/MemSubsystem.pm \
  CheckNwcHealth/DrayTek/Vigor.pm \
  CheckNwcHealth/DrayTek.pm \
  CheckNwcHealth/Barracuda/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Barracuda/Component/HaSubsystem.pm \
  CheckNwcHealth/Barracuda/Component/FwSubsystem.pm \
  CheckNwcHealth/Barracuda.pm \
  CheckNwcHealth/Versa/Component/CpuSubsystem.pm \
  CheckNwcHealth/Versa/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/Versa/Component/MemSubsystem.pm \
  CheckNwcHealth/Versa/Component/PeerSubsystem.pm \
  CheckNwcHealth/Versa.pm \
  CheckNwcHealth/PulseSecure/Gateway/Component/UserSubsystem.pm \
  CheckNwcHealth/PulseSecure/Gateway/Component/EnvironmentalSubsystem.pm \
  CheckNwcHealth/PulseSecure/Gateway/Component/CpuSubsystem.pm \
  CheckNwcHealth/PulseSecure/Gateway/Component/DiskSubsystem.pm \
  CheckNwcHealth/PulseSecure/Gateway/Component/MemSubsystem.pm \
  CheckNwcHealth/PulseSecure/Gateway.pm \
  CheckNwcHealth/Device.pm

SED=/bin/sed
GREP=/bin/grep
CAT=/bin/cat
ECHO=/bin/echo
if DISABLE_STANDALONE
STANDALONE = no
else
STANDALONE = yes
endif

SUFFIXES = .pl .pm .sh

VPATH=$(top_srcdir) $(top_srcdir)/plugins-scripts $(top_srcdir)/plugins-scripts/t

EXTRA_DIST=$(libexec_SCRIPTS).pl $(EXTRA_MODULES) $(GL_MODULES)

CLEANFILES=$(libexec_SCRIPTS)

AM_INSTALL_PROGRAM_FLAGS=@INSTALL_OPTS@

.pm :
	$(AWK) -f ./subst $< > $@
	chmod +x $@

.pl :
	$(AWK) -f ./subst $< > $@
	chmod +x $@

.sh :
	$(AWK) -f ./subst $< > $@
	chmod +x $@

$(libexec_SCRIPTS) : $(EXTRA_DIST)
	$(ECHO) "#! #PERL# -w" | $(AWK) -f ./subst > $@
	$(ECHO) "# nagios: +epn" >> $@
	$(ECHO) >> $@
	if [ "${STANDALONE}" == "yes" ]; then \
		$(ECHO) i am standalone; \
		for m in ${GL_MODULES}; do \
			$(SED) -e 's/^1;//g' < $$m | $(SED) -e '/^__END__/,$$d' | $(SED) -e '/^__PACKAGE__/,$$d' | $(AWK) -f ./subst >> $@; \
		done \
	fi
	for m in ${EXTRA_MODULES}; do \
		$(SED) -e 's/^1;//g' < $$m | $(SED) -e '/^__END__/,$$d' | $(AWK) -f ./subst >> $@; \
	done
	$(ECHO) >> $@
	$(CAT) $(libexec_SCRIPTS).pl | $(AWK) -f ./subst >> $@
	chmod +x $@
